# word_bounds

./: .gitignore  Cargo.toml  LICENSE  README.md  deny.toml  rust-toolchain.toml  rustfmt.toml
benches/: segmentation.rs
src/: lib.rs  resolver.rs  rules.rs
src/impls/: charwalk.rs  fancy_regex.rs  mod.rs  regex.rs
tests/: segmentation_short_strings.rs
